--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: ^4.0.0
   cached_network_image: ^3.2.0
   fluttertoast: ^8.0.9
+  english_words: ^3.1.0
 
 dev_dependencies:
   flutter_test:
